refactoring + bug fixes

--- a/realtime/webserver/templates/index.html
+++ b/realtime/webserver/templates/index.html
@@ -7,7 +7,7 @@
 <h3>Updates</h3>
 <ul id="update-list">
     {% for update in updates %}
-    <li>{{update.type}} at {{update.id}}</li>
+    <li>{{update.message}} at {{update.timestamp}}</li>
     {% endfor %}
 </ul>
 
