--- a/realtime/webserver/templates/index.html
+++ b/realtime/webserver/templates/index.html
@@ -1,15 +1,23 @@
 <script src="{{url_for('static', filename='js/socket.io-1.4.5.js')}}"></script>
+<h1>
+    Flask SQLAlchemy and SocketIO demo
+</h1>
 
-<h1>Flask SQLAlchemy and SocketIO demo</h1>
+<a href='/delete'>
+    Delete all updates
+</a>
 
-<a href='/delete'>Delete all updates</a>
-
-<h3>Updates</h3>
+<h3>
+    Updates
+</h3>
 <ul id="update-list">
     {% for update in updates %}
-    <li>{{update.message}} at {{update.timestamp}}</li>
+    <li id="{{update.id}}">
+        {{update.message}} at {{update.timestamp}}
+    </li>
     {% endfor %}
 </ul>
+
 
 <script>
     var socket = io.connect('/browser');
@@ -20,9 +28,21 @@
     socket.on('connect', function() {
         console.log('SocketIO connected.');
     });
-    socket.on('new_update', function(data) {
-        var el = document.createElement('li');
-        el.innerHTML = data;
-        document.getElementById("update-list").appendChild(el);
+    socket.on('insert', function(data) {
+        var new_version = document.createElement('li');
+        new_version.setAttribute("id", data['id']);
+        new_version.innerHTML = data['message'] + ' at ' + data['timestamp'];
+        document.getElementById("update-list").appendChild(new_version);
+    });
+    socket.on('update', function(data) {
+        var old_version = document.getElementById(data['id']);
+        var new_version = document.createElement('li');
+        new_version.setAttribute("id", data['id']);
+        new_version.innerHTML = data['message'] + ' at ' + data['timestamp'];
+        document.getElementById("update-list").replaceChild(new_version, old_version);
+    });
+    socket.on('delete', function(data) {
+        var old_version = document.getElementById(data['id']);
+        document.getElementById("update-list").removeChild(old_version);
     });
 </script>
