--- a/realtime/webserver/templates/index.html
+++ b/realtime/webserver/templates/index.html
@@ -10,13 +10,21 @@
 <h3>
     Updates
 </h3>
-<ul id="update-list">
+<table id="updates-table" border=1>
+    <tr>
+        <th>ID</th>
+        <th>Timestamp</th>
+        <th>Message</th>
+    </tr>
     {% for update in updates %}
-    <li id="{{update.id}}">
-        {{update.message}} at {{update.timestamp}}
-    </li>
+    <tr id="{{update.id}}-row">
+        {% for column in  %}
+        <td>{{ update.id }}</td>
+        <td>{{ update.timestamp }}</td>
+        <td>{{ update.message }}</td>
+    </tr>
     {% endfor %}
-</ul>
+</table>
 
 
 <script>
@@ -33,11 +41,22 @@
     socket.on('connect', function () {
         console.log('SocketIO connected.');
     });
+    function appendRow(row_data) {
+        var new_row = document.createElement('tr');
+        var columns = {{ columns|safe }}
+        new_row.setAttribute('id', data['id'] + '-row');
+        for (var i = 0; i < length(columns); i++) {
+            var new_cell = document.createElement('td');
+            new_cell.innerText = row_data[columns[i]];
+   // TODO: Finish creating function
+        }
+        new_row.appendChild();
+        new_row.innerHTML = data['message'] + ' at ' + data['timestamp'];
+        document.getElementById("updates-tables").appendChild(new_row);
+
+    };
     socket.on('insert', function (data) {
-        var new_version = document.createElement('li');
-        new_version.setAttribute("id", data['id']);
-        new_version.innerHTML = data['message'] + ' at ' + data['timestamp'];
-        document.getElementById("update-list").appendChild(new_version);
+        appendRow(data);
     });
     socket.on('update', function (data) {
         var old_version = document.getElementById(data['id']);
