--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -2,6 +2,6 @@
 <html>
     <body>
         <div id="app"></div>
-        <script src="../static/js/client.min.js"></script>
+        <script src="js/client.min.js"></script>
     </body>
 </html>
